backend-setup/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-lb
  namespace: backend
spec:
  type: NodePort
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
      app: redis
